fixed fadeout subtext line spacing

--- a/personal-site/src/Styles/Components.css
+++ b/personal-site/src/Styles/Components.css
@@ -69,6 +69,18 @@
     line-height: 36px;
 }
 
+.Line-height-subtext-window {
+    line-height: 28px;
+}
+
+.Line-height-subtext-ipad {
+    line-height: 16px;
+}
+
+.Line-height-subtext-phone {
+    line-height: 14px;
+}
+
 .Menu-bar {
     position: sticky;
     top: 4vh;
